Fix mobile drawer width for any input size on mobile

--- a/frontend/src/styles/common.scss
+++ b/frontend/src/styles/common.scss
@@ -210,7 +210,7 @@
     }
 
     .bp5-drawer.bp5-position-right {
-        width: 95%;
+        width: 95% !important;
 
         & > .usc-content-section {
             .usc-content-subsection,
